[package]
name = "claude-usage-app"
version = "0.3.0"
description = "Claude.ai quota widget — desktop"
authors = ["Han Changhun"]
edition = "2021"

[lib]
name = "claude_usage_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "macros", "sync"] }
url = "2"
log = "0.4"
